crates/oxc_angular_compiler/tests/snapshots/integration_test__animation_enter_nested_for_if.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_For_1_Conditional_1_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n                ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵanimateEnter(function TestComponent_For_1_Conditional_1_Template_animateenter_cb() {
      i0.ɵɵrestoreView(_r1);
      const field_r2 = i0.ɵɵnextContext().$implicit;
      return i0.ɵɵresetView(field_r2.value);
    });
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n            ");
  }
  if ((rf & 2)) {
    const field_r2 = i0.ɵɵnextContext().$implicit;
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate(field_r2.name);
  }
}
function TestComponent_For_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0,"\n            ");
    i0.ɵɵconditionalCreate(1,TestComponent_For_1_Conditional_1_Template,4,1);
  }
  if ((rf & 2)) {
    const field_r2 = ctx.$implicit;
    i0.ɵɵadvance();
    i0.ɵɵconditional((field_r2.visible? 1: -1));
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵrepeaterCreate(0,TestComponent_For_1_Template,2,1,null,null,i0.ɵɵrepeaterTrackByIdentity); }
  if ((rf & 2)) { i0.ɵɵrepeater(ctx.fields); }
}
