crates/oxc_angular_compiler/tests/snapshots/integration_test__chained_pipes.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1);
    i0.ɵɵpipe(2,"lowercase");
    i0.ɵɵpipe(3,"slice");
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    i0.ɵɵadvance();
    i0.ɵɵtextInterpolate(i0.ɵɵpipeBind3(3,3,i0.ɵɵpipeBind1(2,1,ctx.name),0,10));
  }
}
