crates/oxc_angular_compiler/tests/snapshots/integration_test__component_with_multiple_styles.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---

import { Component } from '@angular/core';
import * as i0 from '@angular/core';

export class MultiStyledComponent {
static ɵfac = function MultiStyledComponent_Factory(__ngFactoryType__) {
  return new (__ngFactoryType__ || MultiStyledComponent)();
};
static ɵcmp = /*@__PURE__*/ i0.ɵɵdefineComponent({type:MultiStyledComponent,selectors:[["app-multi-styled"]],
    decls:2,vars:0,template:function MultiStyledComponent_Template(rf,ctx) {
      if ((rf & 1)) {
        i0.ɵɵelementStart(0,"div");
        i0.ɵɵtext(1,"Content");
        i0.ɵɵelementEnd();
      }
    },styles:[".first[_ngcontent-%COMP%] { color: blue; }",".second[_ngcontent-%COMP%] { background: white; }"]});
}
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassDebugInfo(MultiStyledComponent,
      {className:"MultiStyledComponent",filePath:"multi-styled.component.ts",lineNumber:1}));
})();
